Update and rename indexprotection1.html to indexb.html

--- a/indexb.html
+++ b/indexb.html
@@ -50,7 +50,7 @@
 
             // Vérifier si le mot de passe est correct
             if (motDePasse === "28082023") {
-                window.location.href = "index.html"; // Rediriger vers la page protégée
+                window.location.href = "indexprotection1.html"; // Rediriger vers la page protégée
             } else {
                 alert("Mot de passe incorrect. Veuillez réessayer.");
             }
