--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('file:///C:/Users/rolan/Desktop/Arcades/Nouveau%20dossier%20(2)/jtm.jpg'); /* Remplacez l'URL par l'emplacement de votre image de roses */
+            background-image: url('image/jtm.jpg'); /* Remplacez l'URL par l'emplacement de votre image de roses */
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
