--- a/indexprotection1.html
+++ b/indexprotection1.html
@@ -23,7 +23,10 @@
     </style>
 </head>
 <body>
-
+<h1>Page 1</h1>
+    <p>Cliquez sur le lien ci-dessous pour accéder à la page 2 :</p>
+    <a href="indexprotection2.html">Aller à la Page 2 </a>
+    
 <h2>Rozalia's Photo Album</h2>
 
 <div id="slideshow-container">
