--- a/indexprotection1.html
+++ b/indexprotection1.html
@@ -31,170 +31,170 @@
 
 <div id="slideshow-container">
     <div class="mySlides">
-        <img src="photo.jpg" alt="Photo 1">
+        <img src="photo.jpg" alt="Photo 1"/>
     </div>
     <div class="mySlides">
-        <img src="photo1.jpg" alt="Photo 1">
-    </div>
-
-    <div class="mySlides">
-        <img src="photo2.jpg" alt="Photo 2">
+        <img src="photo1.jpg" alt="Photo 1"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo3.jpeg" alt="Photo 1">
+        <img src="photo2.jpg" alt="Photo 2"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo4.jpeg" alt="Photo 2">
+        <img src="photo3.jpeg" alt="Photo 1"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo5.jpg" alt="Photo 3">
+        <img src="photo4.jpeg" alt="Photo 2"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo6.jpg" alt="Photo 4">
+        <img src="photo5.jpg" alt="Photo 3"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo7.jpg" alt="Photo 5">
+        <img src="photo6.jpg" alt="Photo 4"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo8.jpg" alt="Photo 6">
+        <img src="photo7.jpg" alt="Photo 5"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo9.jpg" alt="Photo 7">
+        <img src="photo8.jpg" alt="Photo 6"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo10.jpg" alt="Photo 8">
+        <img src="photo9.jpg" alt="Photo 7"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo11.jpg" alt="Photo 9">
+        <img src="photo10.jpg" alt="Photo 8"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo12.jpg" alt="Photo 10">
+        <img src="photo11.jpg" alt="Photo 9"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo13.jpg" alt="Photo 1">
+        <img src="photo12.jpg" alt="Photo 10"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo14.jpg" alt="Photo 2">
+        <img src="photo13.jpg" alt="Photo 1"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo15.jpg" alt="Photo 3">
+        <img src="photo14.jpg" alt="Photo 2"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo16.jpg" alt="Photo 4">
+        <img src="photo15.jpg" alt="Photo 3"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo17.jpg" alt="Photo 5">
+        <img src="photo16.jpg" alt="Photo 4"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo18.jpg" alt="Photo 6">
+        <img src="photo17.jpg" alt="Photo 5"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo19.jpg" alt="Photo 7">
+        <img src="photo18.jpg" alt="Photo 6"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo20.jpg" alt="Photo 8">
+        <img src="photo19.jpg" alt="Photo 7"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo21.jpg" alt="Photo 9">
+        <img src="photo20.jpg" alt="Photo 8"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo22.jpg" alt="Photo 10">
+        <img src="photo21.jpg" alt="Photo 9"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo23.jpg" alt="Photo 1">
+        <img src="photo22.jpg" alt="Photo 10"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo24.jpg" alt="Photo 2">
+        <img src="photo23.jpg" alt="Photo 1"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo25.jpg" alt="Photo 3">
+        <img src="photo24.jpg" alt="Photo 2"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo26.jpg" alt="Photo 4">
+        <img src="photo25.jpg" alt="Photo 3"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo27.jpg" alt="Photo 5">
+        <img src="photo26.jpg" alt="Photo 4"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo28.jpg" alt="Photo 6">
+        <img src="photo27.jpg" alt="Photo 5"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo29.jpg" alt="Photo 7">
+        <img src="photo28.jpg" alt="Photo 6"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo30.jpg" alt="Photo 8">
+        <img src="photo29.jpg" alt="Photo 7"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo31.jpg" alt="Photo 9">
+        <img src="photo30.jpg" alt="Photo 8"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo32.jpg" alt="Photo 10">
+        <img src="photo31.jpg" alt="Photo 9"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo33.jpg" alt="Photo 1">
+        <img src="photo32.jpg" alt="Photo 10"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo34.jpg" alt="Photo 2">
+        <img src="photo33.jpg" alt="Photo 1"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo35.jpg" alt="Photo 3">
+        <img src="photo34.jpg" alt="Photo 2"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo36.jpg" alt="Photo 4">
+        <img src="photo35.jpg" alt="Photo 3"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo37.jpg" alt="Photo 5">
+        <img src="photo36.jpg" alt="Photo 4"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo38.jpg" alt="Photo 6">
+        <img src="photo37.jpg" alt="Photo 5"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo39.jpg" alt="Photo 7">
+        <img src="photo38.jpg" alt="Photo 6"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo40.jpg" alt="Photo 8">
+        <img src="photo39.jpg" alt="Photo 7"/>
     </div>
 
     <div class="mySlides">
-        <img src="photo41.jpg" alt="Photo 9">
+        <img src="photo40.jpg" alt="Photo 8"/>
+    </div>
+
+    <div class="mySlides">
+        <img src="photo41.jpg" alt="Photo 9"/>
     </div>
 
     <div class="mySlides">
