--- a/indexprotection1.html
+++ b/indexprotection1.html
@@ -31,18 +31,18 @@
 
 <div id="slideshow-container">
     <div class="mySlides">
-        <img src="https://github.com/RolandR19/Saint-Valentin/blob/main/photo.JPG" alt="Photo 1">
+        <img src="photo.JPG" alt="Photo 1">
     </div>
     <div class="mySlides">
-        <img src="https://github.com/RolandR19/Saint-Valentin/blob/main/photo1.JPG" alt="Photo 1">
-    </div>
-
-    <div class="mySlides">
-        <img src="photo2.jpg" alt="Photo 2">
+        <img src="photo1.JPG" alt="Photo 1">
     </div>
 
     <div class="mySlides">
-        <img src="photo3.jpeg" alt="Photo 1">
+        <img src="photo2.JPG" alt="Photo 2">
+    </div>
+
+    <div class="mySlides">
+        <img src="photo3.JPEG" alt="Photo 1">
     </div>
 
     <div class="mySlides">
