--- a/indexprotection1.html
+++ b/indexprotection1.html
@@ -31,7 +31,7 @@
 
 <div id="slideshow-container">
     <div class="mySlides">
-        <img src="photo.JPG" alt="Photo 1">
+        <img src="https://drive.google.com/file/d/1HsmpVWQMu5indH2fqisJOZhxbOYhQEbt/view?usp=sharing" alt="Photo 1">
     </div>
     <div class="mySlides">
         <img src="photo1.JPG" alt="Photo 1">
