--- a/indexprotection1.html
+++ b/indexprotection1.html
@@ -34,27 +34,27 @@
         <img src="https://drive.google.com/file/d/1HsmpVWQMu5indH2fqisJOZhxbOYhQEbt/view?usp=sharing" alt="Photo 1">
     </div>
     <div class="mySlides">
-        <img src="photo1.JPG" alt="Photo 1">
+        <img src="https://drive.google.com/file/d/1jNgDThhjr6AKPVN3IAjy3ZCfHQ9KsVih/view?usp=sharing" alt="Photo 1">
     </div>
 
     <div class="mySlides">
-        <img src="photo2.JPG" alt="Photo 2">
+        <img src="https://drive.google.com/file/d/1o-5yu1vKFszicIZp9qQPpvsbmKVVkSYY/view?usp=sharing" alt="Photo 2">
     </div>
 
     <div class="mySlides">
-        <img src="photo3.JPEG" alt="Photo 1">
+        <img src="https://drive.google.com/file/d/1rVLQChrfkt862PNOHQAd6K6RD_dv_dD8/view?usp=sharing" alt="Photo 1">
     </div>
 
     <div class="mySlides">
-        <img src="photo4.jpeg" alt="Photo 2">
+        <img src="https://drive.google.com/file/d/1EOTZKEq64NGqU2l_5IcTjL_oQg_g_aM0/view?usp=sharing" alt="Photo 2">
     </div>
 
     <div class="mySlides">
-        <img src="photo5.jpg" alt="Photo 3">
+        <img src="https://drive.google.com/file/d/1DAMlLg8NM_hTFIAS3lXZK5yOioSxn9qk/view?usp=sharing" alt="Photo 3">
     </div>
 
     <div class="mySlides">
-        <img src="photo6.jpg" alt="Photo 4">
+        <img src="https://drive.google.com/file/d/1rSejrwg1rcmu-pZFRbGJlYQBlIkC11VB/view?usp=sharing" alt="Photo 4">
     </div>
 
     <div class="mySlides">
