--- a/indexprotection1.html
+++ b/indexprotection1.html
@@ -31,50 +31,50 @@
 
 <div id="slideshow-container">
     <div class="mySlides">
-        <img src="https://drive.google.com/file/d/1HsmpVWQMu5indH2fqisJOZhxbOYhQEbt/view?usp=sharing" alt="Photo 1">
+        <img src="photo.JPG" alt="Photo 1">
     </div>
     <div class="mySlides">
-        <img src="https://drive.google.com/file/d/1jNgDThhjr6AKPVN3IAjy3ZCfHQ9KsVih/view?usp=sharing" alt="Photo 2">
-    </div>
-
-    <div class="mySlides">
-        <img src="https://drive.google.com/file/d/1o-5yu1vKFszicIZp9qQPpvsbmKVVkSYY/view?usp=sharing" alt="Photo 1">
+        <img src="photo1.JPG" alt="Photo 2">
     </div>
 
     <div class="mySlides">
-        <img src="https://drive.google.com/file/d/1rVLQChrfkt862PNOHQAd6K6RD_dv_dD8/view?usp=sharing" alt="Photo 2">
+        <img src="photo2.JPG" alt="Photo 1">
     </div>
 
     <div class="mySlides">
-        <img src="https://drive.google.com/file/d/1EOTZKEq64NGqU2l_5IcTjL_oQg_g_aM0/view?usp=sharing" alt="Photo 1">
+        <img src="photo3.JPEG" alt="Photo 2">
     </div>
 
     <div class="mySlides">
-        <img src="https://drive.google.com/file/d/1DAMlLg8NM_hTFIAS3lXZK5yOioSxn9qk/view?usp=sharing" alt="Photo 1">
+        <img src="photo4.JPEG" alt="Photo 1">
     </div>
 
     <div class="mySlides">
-        <img src="https://drive.google.com/file/d/1rSejrwg1rcmu-pZFRbGJlYQBlIkC11VB/view?usp=sharing" alt="Photo 1">
+        <img src="photo5.PNG" alt="Photo 1">
     </div>
 
     <div class="mySlides">
-        <img src="https://drive.google.com/file/d/1ee_Ch224Il5AaGF3J8poSKqTjp6iFmZ2/view?usp=sharing" alt="Photo 1">
+        <img src="photo6.JPG" alt="Photo 1">
     </div>
 
     <div class="mySlides">
-        <img src="https://drive.google.com/file/d/1RMQ-pFNELNuUDasx59PmoOxPYWKtNy6X/view?usp=sharing" alt="Photo 2">
+        <img src="photo7.JPG" alt="Photo 1">
     </div>
 
     <div class="mySlides">
-        <img src="https://drive.google.com/file/d/1bXRCKz6iwocioMroOCdpi419E-bmz6pk/view?usp=sharing" alt="Photo 1">
+        <img src="photo8.JPG" alt="Photo 2">
     </div>
 
     <div class="mySlides">
-        <img src="https://drive.google.com/file/d/1eYRURhtpGBTf_piJzNvyuzyg09WJk6kl/view?usp=sharing" alt="Photo 1">
+        <img src="photo9.JPG" alt="Photo 1">
     </div>
 
     <div class="mySlides">
-        <img src="https://drive.google.com/file/d/1ubCeHE9hpZk3aQ1jH888_jXyG8z_F9KT/view?usp=sharing" alt="Photo 2">
+        <img src="photo10.JPG" alt="Photo 1">
+    </div>
+
+    <div class="mySlides">
+        <img src="photo11.JPG" alt="Photo 2">
     </div>
 
     <div class="mySlides">
