--- a/indexprotection1.html
+++ b/indexprotection1.html
@@ -130,11 +130,11 @@
     </div>
 
     <div class="mySlides">
-        <img src="photo27.jpg" alt="Photo 5">
+        <img src="photo27.JPG" alt="Photo 5">
     </div>
 
     <div class="mySlides">
-        <img src="photo28.jpg" alt="Photo 6">
+        <img src="photo28.JPG" alt="Photo 6">
     </div>
 
     <div class="mySlides">
@@ -150,7 +150,7 @@
     </div>
 
     <div class="mySlides">
-        <img src="photo32.jpg" alt="Photo 10">
+        <img src="photo32.JPG" alt="Photo 10">
     </div>
 
     <div class="mySlides">
