--- a/indexprotection1.html
+++ b/indexprotection1.html
@@ -166,19 +166,19 @@
     </div>
 
     <div class="mySlides">
-        <img src="photo36.jpg" alt="Photo 4">
+        <img src="photo36.JPG" alt="Photo 4">
     </div>
 
     <div class="mySlides">
-        <img src="photo37.jpg" alt="Photo 5">
+        <img src="photo37.JPG" alt="Photo 5">
     </div>
 
     <div class="mySlides">
-        <img src="photo38.jpg" alt="Photo 6">
+        <img src="photo38.JPG" alt="Photo 6">
     </div>
 
     <div class="mySlides">
-        <img src="photo39.jpg" alt="Photo 7">
+        <img src="photo39.JPG" alt="Photo 7">
     </div>
 
     <div class="mySlides">
@@ -186,38 +186,38 @@
     </div>
 
     <div class="mySlides">
-        <img src="photo41.jpg" alt="Photo 9">
+        <img src="photo41.JPG" alt="Photo 9">
     </div>
 
     <div class="mySlides">
-        <img src="photo42.jpg" alt="Photo 10">
+        <img src="photo42.JPG" alt="Photo 10">
     </div>
     <div class="mySlides">
-        <img src="photo43.jpg" alt="Photo 1">
-    </div>
-
-    <div class="mySlides">
-        <img src="photo44.jpg" alt="Photo 2">
+        <img src="photo43.JPG" alt="Photo 1">
     </div>
 
     <div class="mySlides">
-        <img src="photo45.jpg" alt="Photo 3">
+        <img src="photo44.JPG" alt="Photo 2">
     </div>
 
     <div class="mySlides">
-        <img src="photo46.jpg" alt="Photo 4">
+        <img src="photo45.JPG" alt="Photo 3">
     </div>
 
     <div class="mySlides">
-        <img src="photo47.jpg" alt="Photo 5">
+        <img src="photo46.JPG" alt="Photo 4">
     </div>
 
     <div class="mySlides">
-        <img src="photo48.jpg" alt="Photo 6">
+        <img src="photo47.JPG" alt="Photo 5">
     </div>
 
     <div class="mySlides">
-        <img src="photo49.jpg" alt="Photo 7">
+        <img src="photo48.JPG" alt="Photo 6">
+    </div>
+
+    <div class="mySlides">
+        <img src="photo49.JPG" alt="Photo 7">
     </div>
 
     <div class="mySlides">
@@ -237,19 +237,19 @@
     </div>
 
     <div class="mySlides">
-        <img src="photo54.jpg" alt="Photo 2">
+        <img src="photo54.JPG" alt="Photo 2">
     </div>
 
     <div class="mySlides">
-        <img src="photo55.jpg" alt="Photo 3">
+        <img src="photo55.JPG" alt="Photo 3">
     </div>
 
     <div class="mySlides">
-        <img src="photo56.jpg" alt="Photo 4">
+        <img src="photo56.JPG" alt="Photo 4">
     </div>
 
     <div class="mySlides">
-        <img src="photo57.jpg" alt="Photo 5">
+        <img src="photo57.JPG" alt="Photo 5">
     </div>
 
     <div class="mySlides">
