--- a/indexprotection1.html
+++ b/indexprotection1.html
@@ -388,7 +388,7 @@
     </div>
 
     <div class="mySlides">
-        <img src="photo93.jpg" alt="Photo 10">
+        <img src="photo93.JPG" alt="Photo 10">
     </div>
 <h1>Page 1</h1>
     <p>Cliquez sur le lien ci-dessous pour accéder à la page 2 :</p>
