--- a/indexprotection1.html
+++ b/indexprotection1.html
@@ -182,7 +182,7 @@
     </div>
 
     <div class="mySlides">
-        <img src="photo40.jpg" alt="Photo 8">
+        <img src="photo40.JPG" alt="Photo 8">
     </div>
 
     <div class="mySlides">
@@ -225,7 +225,7 @@
     </div>
 
     <div class="mySlides">
-        <img src="photo51.jpg" alt="Photo 9">
+        <img src="photo51.JPG" alt="Photo 9">
     </div>
 
     <div class="mySlides">
@@ -257,31 +257,31 @@
     </div>
 
     <div class="mySlides">
-        <img src="photo59.jpg" alt="Photo 7">
+        <img src="photo59.JPG" alt="Photo 7">
     </div>
 
     <div class="mySlides">
-        <img src="photo60.jpg" alt="Photo 8">
+        <img src="photo60.JPG" alt="Photo 8">
     </div>
 
     <div class="mySlides">
-        <img src="photo61.jpg" alt="Photo 9">
+        <img src="photo61.JPG" alt="Photo 9">
     </div>
 
     <div class="mySlides">
-        <img src="photo62.jpg" alt="Photo 10">
+        <img src="photo62.JPG" alt="Photo 10">
     </div>
 
     <div class="mySlides">
-        <img src="photo63.jpg" alt="Photo 1">
+        <img src="photo63.JPG" alt="Photo 1">
     </div>
 
     <div class="mySlides">
-        <img src="photo64.jpg" alt="Photo 2">
+        <img src="photo64.JPG" alt="Photo 2">
     </div>
 
     <div class="mySlides">
-        <img src="photo65.jpg" alt="Photo 3">
+        <img src="photo65.JPG" alt="Photo 3">
     </div>
 
     <div class="mySlides">
@@ -289,102 +289,102 @@
     </div>
 
     <div class="mySlides">
-        <img src="photo67.jpg" alt="Photo 5">
+        <img src="photo67.JPG" alt="Photo 5">
     </div>
 
     <div class="mySlides">
-        <img src="photo68.jpg" alt="Photo 6">
+        <img src="photo68.JPG" alt="Photo 6">
     </div>
 
     <div class="mySlides">
-        <img src="photo69.jpg" alt="Photo 7">
+        <img src="photo69.JPG" alt="Photo 7">
     </div>
 
     <div class="mySlides">
-        <img src="photo70.jpg" alt="Photo 8">
+        <img src="photo70.JPG" alt="Photo 8">
     </div>
 
     <div class="mySlides">
-        <img src="photo71.jpg" alt="Photo 9">
+        <img src="photo71.JPG" alt="Photo 9">
     </div>
 
     <div class="mySlides">
-        <img src="photo72.jpg" alt="Photo 10">
+        <img src="photo72.JPG" alt="Photo 10">
     </div>
 
     <div class="mySlides">
-        <img src="photo73.jpg" alt="Photo 1">
+        <img src="photo73.JPG" alt="Photo 1">
     </div>
 
     <div class="mySlides">
-        <img src="photo74.jpg" alt="Photo 2">
+        <img src="photo74.JPG" alt="Photo 2">
     </div>
 
     <div class="mySlides">
-        <img src="photo75.jpeg" alt="Photo 3">
+        <img src="photo75.JPEG" alt="Photo 3">
     </div>
 
     <div class="mySlides">
-        <img src="photo77.jpg" alt="Photo 5">
+        <img src="photo77.JPG" alt="Photo 5">
     </div>
 
     <div class="mySlides">
-        <img src="photo78.jpg" alt="Photo 6">
+        <img src="photo78.JPG" alt="Photo 6">
     </div>
 
     <div class="mySlides">
-        <img src="photo79.jpg" alt="Photo 7">
+        <img src="photo79.JPG" alt="Photo 7">
     </div>
 
     <div class="mySlides">
-        <img src="photo80.jpg" alt="Photo 8">
+        <img src="photo80.JPG" alt="Photo 8">
     </div>
 
     <div class="mySlides">
-        <img src="photo81.jpg" alt="Photo 9">
+        <img src="photo81.JPG" alt="Photo 9">
     </div>
 
     <div class="mySlides">
-        <img src="photo82.jpg" alt="Photo 10">
+        <img src="photo82.JPG" alt="Photo 10">
     </div>
     <div class="mySlides">
-        <img src="photo83.jpg" alt="Photo 1">
-    </div>
-
-    <div class="mySlides">
-        <img src="photo84.jpg" alt="Photo 2">
+        <img src="photo83.JPG" alt="Photo 1">
     </div>
 
     <div class="mySlides">
-        <img src="photo85.jpg" alt="Photo 3">
+        <img src="photo84.JPG" alt="Photo 2">
     </div>
 
     <div class="mySlides">
-        <img src="photo86.jpg" alt="Photo 4">
+        <img src="photo85.JPG" alt="Photo 3">
     </div>
 
     <div class="mySlides">
-        <img src="photo87.jpg" alt="Photo 5">
+        <img src="photo86.JPG" alt="Photo 4">
     </div>
 
     <div class="mySlides">
-        <img src="photo88.jpg" alt="Photo 6">
+        <img src="photo87.JPG" alt="Photo 5">
     </div>
 
     <div class="mySlides">
-        <img src="photo89.jpg" alt="Photo 7">
+        <img src="photo88.JPG" alt="Photo 6">
     </div>
 
     <div class="mySlides">
-        <img src="photo90.jpg" alt="Photo 8">
+        <img src="photo89.JPG" alt="Photo 7">
     </div>
 
     <div class="mySlides">
-        <img src="photo91.jpg" alt="Photo 9">
+        <img src="photo90.JPG" alt="Photo 8">
     </div>
 
     <div class="mySlides">
-        <img src="photo92.jpg" alt="Photo 10">
+        <img src="photo91.JPG" alt="Photo 9">
+    </div>
+
+    <div class="mySlides">
+        <img src="photo92.JPG" alt="Photo 10">
     </div>
 
     <div class="mySlides">
